Se actualizan recursos en el storage

--- a/tecolotl-web/src/main/webapp/template/profesor/header-profesor-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/header-profesor-alumno.xhtml
@@ -9,10 +9,10 @@
 
 
 <h:head>
-    <h:outputStylesheet library="css" name="uikit.css" />
-    <h:outputStylesheet library="css" name="dashboard.css"/>
-    <h:outputStylesheet library="css" name="letra.css"/>
-    <h:outputStylesheet library="css" name="cards.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/uikit.css" />
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/dashboard.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/letra.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/cards.css"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </h:head>
