--- a/tecolotl-web/src/main/webapp/template/escolar/header-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/header-profesor.xhtml
@@ -9,10 +9,10 @@
 
 
 <h:head>
-    <h:outputStylesheet library="css" name="uikit.css" />
-    <h:outputStylesheet library="css" name="letra.css"/>
-    <h:outputStylesheet library="css" name="navegacion.css"/>
-    <h:outputStylesheet library="css" name="esquadron.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/uikit.css" />
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/letra.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/navegacion.css"/>
+     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/esquadron.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </h:head>
 </html>
