--- a/tecolotl-web/src/main/webapp/template/profesor/header-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/header-profesor.xhtml
@@ -9,7 +9,7 @@
 
 
 <h:head>
-    <link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
+    <link  rel="shortcut icon"  href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/favicon.ico"/>
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/uikit.css"/>
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/letra.css"/>
     <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/navegacion.css"/>
